Adicionando esquici senha, IA, personalização do usuario e finalizando a API